--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-This is Eileen's homepage. 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+     
+  </head>
+  <body>
+    <h1> This is Eileen's homepage. </h1>
+  </body>
+</html>
