--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-     
-  </head>
-  <body>
-    <h1> This is Eileen's homepage. </h1>
+  <body style="background-color:powderblue;">
+    <h1 > This is Eileen's homepage. </h1>
   </body>
 </html>
