--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <body style="background-color:powderblue;">
+  
+  <head>
+    <style>
+      h1 {color:"DarkOliveGreen";}  
+    </style>
+  </head>
+  
+  <body style="background-color:"ivory";">
     <h1 > This is Eileen's homepage. </h1>
   </body>
+  
 </html>
