--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   
   <head>
     <style>
-      h1 {color:"DarkOliveGreen";}  
+      h1 {color:DarkOliveGreen;}  
     </style>
   </head>
   
-  <body style="background-color:"ivory";">
-    <h1 > This is Eileen's homepage. </h1>
+  <body style="background-color:ivory;">
+    <h1> This is Eileen's homepage. </h1>
   </body>
   
 </html>
